logs/cloudmesh-pbs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/cloudmesh_base'...
Compiling './lib/python3.5/site-packages/cloudmesh_base/ConfigDict.py'...
***   File "./lib/python3.5/site-packages/cloudmesh_base/ConfigDict.py", line 142
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudmesh_base/Shell.py'...
***   File "./lib/python3.5/site-packages/cloudmesh_base/Shell.py", line 220
    print '\n'.join(cls.command['windows'])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudmesh_base/ShellOriginal.py'...
***   File "./lib/python3.5/site-packages/cloudmesh_base/ShellOriginal.py", line 363
    print Shell.ls("-1")
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudmesh_base/i.py'...
***   File "./lib/python3.5/site-packages/cloudmesh_base/i.py", line 11
    print "Loading:", name, filename
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cloudmesh_base/menu.py'...
***   File "./lib/python3.5/site-packages/cloudmesh_base/menu.py", line 46
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudmesh_base/ssh_config.py'...
***   File "./lib/python3.5/site-packages/cloudmesh_base/ssh_config.py", line 90
    print hosts.list()
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudmesh_base/util.py'...
***   File "./lib/python3.5/site-packages/cloudmesh_base/util.py", line 66
    print "Invalid input..."
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cloudmesh_base/version_incr.py'...
***   File "./lib/python3.5/site-packages/cloudmesh_base/version_incr.py", line 46
    print "Changing version in file", self.filename
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cloudmesh_base-3.5.2.dist-info'...
Listing './lib/python3.5/site-packages/cloudmesh_database'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/gitchangelog'...
Listing './lib/python3.5/site-packages/gitchangelog/templates'...
Listing './lib/python3.5/site-packages/gitchangelog/templates/mako'...
Listing './lib/python3.5/site-packages/gitchangelog/templates/mustache'...
Listing './lib/python3.5/site-packages/gitchangelog-3.0.3.dist-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pyaml'...
Listing './lib/python3.5/site-packages/pyaml/tests'...
Listing './lib/python3.5/site-packages/pyaml-17.12.1.dist-info'...
Listing './lib/python3.5/site-packages/pytimeparse'...
Listing './lib/python3.5/site-packages/pytimeparse/tests'...
Listing './lib/python3.5/site-packages/pytimeparse-1.1.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tox'...
Listing './lib/python3.5/site-packages/tox-2.9.1.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.30.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
